--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,11 @@
 .leaflet-container {
   width: 100%;
   height: 100vh;
+  z-index: 0;
 }
 
 .popup-line {
   font-size: 0.7rem;
   padding: 2px;
 }
+
