--- a/src/App.css
+++ b/src/App.css
@@ -9,3 +9,28 @@
   padding: 2px;
 }
 
+.notification-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+}
+
+.notification {
+  z-index: 100;
+  justify-self: center;
+  position: absolute;
+  top: 20px;
+  background-color: bisque; 
+  width: 40%;
+  height: auto; 
+  display: flex; 
+  align-items: center;
+  justify-content: center;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 -1px 4px 0 rgba(25, 32, 36, 0.04),
+    0 3px 6px 0 rgba(25, 32, 36, 0.16);
+}
