--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@
   z-index: 100;
   justify-self: center;
   position: absolute;
-  top: 20px;
+  bottom: 50px;
   background-color: bisque; 
   width: 40%;
   height: auto; 
