--- a/src/App.css
+++ b/src/App.css
@@ -23,7 +23,7 @@
   justify-self: center;
   position: absolute;
   bottom: 50px;
-  background-color: bisque; 
+  background-color: rgb(206, 167, 12); 
   width: 40%;
   height: auto; 
   display: flex; 
